TG-667 Added styling so breadcrumbs behave correctly on small and
large devices

--- a/Src/StaticSite/assets/styles/modules/components/_breadcrumbs.scss
+++ b/Src/StaticSite/assets/styles/modules/components/_breadcrumbs.scss
@@ -7,6 +7,24 @@
         margin: $space 0;
         padding: 0 $space-double;
         @include span(12);
+
+        &.medium-down {
+          display: block;
+        }
+
+        &.medium-up {
+          display: none;
+        }
+
+        @include medium-up {
+          &.medium-down {
+            display: none;
+          }
+
+          &.medium-up {
+            display: block;
+          }
+        }
     }
 
     li {
@@ -19,17 +37,41 @@
         }
         &:after {
             content: "";
-            background-image: url('/assets/images/icon_arrow-round.svg');
-            transform: rotate(180deg);
-            background-size: $icon-size-small $icon-size-small;
             background-repeat: no-repeat;
-            height: $icon-size-small;
-            width: $icon-size-small;
             display: inline-block;
             margin: 0 $space 0 $space-double;
             vertical-align: middle;
 
         }
+    }
+
+    .medium-down {
+      li {
+        &:after {
+          background-image: url('/assets/images/icon_arrow-round.svg');
+          transform: rotate(180deg);
+          background-size: $icon-size-small $icon-size-small;
+          height: $icon-size-small;
+          width: $icon-size-small;
+        }
+      }
+    }
+
+    .medium-up {
+      li {
+        &:after {
+          background-image: url('/assets/images/icon_arrow-right-grey.svg');
+          background-size: $icon-size-tiny $icon-size-tiny;
+          height: $icon-size-tiny;
+          width: $icon-size-tiny;
+        }
+
+        &:last-of-type {
+          &:after {
+            display: none;
+          }
+        }
+      }
     }
 
     a {
